unpackaged/main/default/objects/CAPA_Plan__c/CAPA_Plan__c.object-meta.xml
<CustomObject>
    <label>CAPA Plan</label>
    <nameField>
        <label>CAPA Plan Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CAPA Plans</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>