unpackaged/main/default/objects/CAPA_Plan__c/fields/CAPA_ParentWorkFlowAction__c.field-meta.xml
<CustomField>
        <fullName>CAPA_ParentWorkFlowAction__c</fullName>
        <formula>CAPA__r.CMPL123_WF_Action__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CAPA_ParentWorkFlowAction</label>
        <type>Text</type>
    </CustomField>