unpackaged/main/default/objects/CAPA_Plan__c/fields/Plan_Summary__c.field-meta.xml
<CustomField>
        <fullName>Plan_Summary__c</fullName>
        <label>Plan Summary</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </CustomField>