unpackaged/main/default/objects/CAPA_Plan__c/validationRules/Prevent_Edit_CAPA_plan.validationRule-meta.xml
<ValidationRule>
        <fullName>Prevent_Edit_CAPA_plan</fullName>
        <active>true</active>
        <errorConditionFormula>CAPA__r.CMPL123_WF_Action__c =="Approve"</errorConditionFormula>
        <errorMessage>Record Locked</errorMessage>
    </ValidationRule>